# pyvae

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pixi.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
conda-recipe/: README.md  meta.yaml  recipe.yaml
pyvae/: __init__.py  bio.py  components.py  datasets.py  layers.py  models.py  train.py  utils.py
tests/contract/: test_ivae_contract.py
tests/unit/: test_model_behavior.py  test_refactor_regression.py
