[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvae"
version = "0.0.1"
description = "Informed Variational Autoencoder (iVAE) with biologically constrained encoder layers."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Amir Aynede", email = "amiraynede@gmail.com" },
  { name = "Carlos Loucera", email = "clou@us.es" }
]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3,<3",
  "numpy>=1.26,<3",
  "pandas>=2.0,<3",
  "scanpy>=1.11,<2",
  "scikit-misc>=0.3",
  "tqdm>=4.66,<5"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = ["vae", "pytorch", "bioinformatics", "gene-expression", "reactome"]

[project.urls]
Homepage = "https://github.com/aipher-group/pyvae"
Repository = "https://github.com/aipher-group/pyvae"
Issues = "https://github.com/aipher-group/pyvae/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0,<10",
  "build>=1.2",
  "twine>=6.0",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
include = ["pyvae*"]
exclude = ["tests*"]

[tool.pixi.workspace]
name = "pyvae"
version = "0.0.1"
authors = ["Amir Aynede <amiraynede@gmail.com>", "Carlos Loucera <clou@us.es>"]
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["osx-arm64", "linux-64"]
# `pixi-build` enables `pixi build` / `pixi publish` for the conda package
# defined in `[tool.pixi.package]` below. pyvae is pure Python, so the package
# is built `noarch` and installs on every platform from a single build.
preview = ["pixi-build"]

# --- conda package definition (consumed by `pixi build` / `pixi publish`) ------
# Metadata (name, version, dependencies, entry points) is read from the PEP 621
# `[project]` table above. pyvae has no compiled extensions, so it builds as a
# single `noarch: python` conda package that installs on every platform.
[tool.pixi.package]
name = "pyvae"
version = "0.0.1"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"
# Channels used to resolve the build backend itself (not runtime deps).
channels = [
  "https://prefix.dev/pixi-build-backends",
  "https://prefix.dev/conda-forge",
]

[tool.pixi.package.host-dependencies]
# Build-time backend matching `[build-system]` (setuptools).
setuptools = ">=69"
wheel = "*"
pip = "*"

[tool.pixi.tasks]
isgpu = "python -c 'import torch; print(\"CUDA available:\", torch.cuda.is_available())'"
fixcode = "ruff check --extend-select I --fix pyvae"
formatcode = "ruff format pyvae"

[tool.pixi.dependencies]
# Python + conda-only / binary-critical packages
python = "3.13.*"
pip = "*"
scipy = ">=1.10,<2"
scikit-learn = ">=1.7.2,<2"
leidenalg = ">=0.10,<1"
python-igraph = ">=0.11.9,<2"
scikit-misc = ">=0.3.0"
anndata = ">=0.11.4,<0.12"
pynndescent = ">=0.5.13,<0.6"

[tool.pixi.feature.dev.dependencies]
# Development tooling
pytest = ">=9.0.3,<10"
ruff = ">=0.6.2,<1"
python-dotenv = ">=1.2.2,<2"

[tool.pixi.feature.notebook.dependencies]
# Notebook / exploration / visualisation
ipykernel = "*"
ipywidgets = ">=8.1.8,<9"
jupyterlab = ">=4.5.8,<5"
nbconvert = ">=7.17.1,<8"
nbformat = ">=5.10.4,<6"
nbclient = ">=0.11.0,<0.12"
seaborn = ">=0.13.2,<0.14"
matplotlib = ">=3.10.9,<4"
graphviz = ">=7.1.0,<7.2"
pydot = ">=3.0.1,<3.1"
statsmodels = ">=0.14.6,<0.15"

[tool.pixi.pypi-dependencies]
pyvae = { path = ".", editable = true }

# --- publish: PyPI build + upload (pixi has no native PyPI publish yet) ---------
# Lean, isolated env (no torch/dev stack). `build` honours the setuptools
# `[build-system]` backend declared above; `twine` uploads the artifacts.
[tool.pixi.feature.publish.dependencies]
python = ">=3.10"
python-build = ">=1.2"   # provides `python -m build`
twine = ">=6.0"

[tool.pixi.feature.publish.tasks]
# Build sdist + wheel into dist/ using the declared PEP 517 backend.
build-dist = { cmd = "python -m build", inputs = [
  "pyvae/*",
  "pyproject.toml",
  "README.md",
  "LICENSE",
], outputs = ["dist/*"] }
# Validate metadata before any upload.
check-dist = { cmd = "twine check dist/*", depends-on = ["build-dist"] }
# Upload to PyPI (override with TWINE_REPOSITORY for TestPyPI). Skips existing.
publish-pypi = { cmd = "twine upload --skip-existing dist/*", depends-on = [
  "check-dist",
] }

# --- cpu: pytorch from conda-forge/pytorch channel, all platforms ---------------
[tool.pixi.feature.cpu.dependencies]
pytorch = ">=2.3.0,<3"

# --- cuda12: conda pytorch + cuda runtime, linux-64 only -----------------------
[tool.pixi.feature.cuda12]
platforms = ["linux-64"]

[tool.pixi.feature.cuda12.system-requirements]
cuda = "12"

[tool.pixi.feature.cuda12.dependencies]
pytorch = ">=2.3.0,<3"

[tool.pixi.feature.cuda12.target.linux-64.dependencies]
pytorch-cuda = "12.*"

# --- rocm72: PyPI torch from AMD ROCm index, linux-64 only ---------------------
[tool.pixi.feature.rocm72]
platforms = ["linux-64"]

[tool.pixi.feature.rocm72.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/rocm7.2"]
index-strategy = "unsafe-best-match"

[tool.pixi.feature.rocm72.pypi-dependencies]
torch = ">=2.4,<3"
torchvision = ">=0.19,<1"
torchaudio = ">=2.4,<3"

[tool.pixi.environments]
default = { features = ["cpu", "dev", "notebook"], solve-group = "torch" }
ci     = { features = ["cpu", "dev"], solve-group = "torch" }
cuda12 = { features = ["cuda12", "dev", "notebook"], solve-group = "torch" }
rocm72 = { features = ["rocm72", "dev", "notebook"], solve-group = "rocm" }
# Minimal env for building/uploading the PyPI artifacts; no torch stack pulled in.
publish = { features = ["publish"], no-default-feature = true }
